--- a/portfolio.html
+++ b/portfolio.html
@@ -307,6 +307,32 @@
             </ul> 
 
         </div>
+        <div class="footer-field">             
+            <p class="footer-input-uptitle">Підпишіться на розсилку</p>
+            <form class="footer-form">                   
+             <label for="send-email" class="input-label hidden">Пошта</label>
+             <div class="footer-input-wrapper">
+                   <input
+                   type="email" 
+                   name="send-email" 
+                   class="footer-input" 
+                   id="send-email"
+                   placeholder="E-mail"
+                   required 
+                   >
+                
+                <button type="submit" class="footer-btn">
+                    Підписатися
+                    <span>
+                    <svg class="icon-send" width="24" height="24">
+                        <use href="./images/icons.svg#icon-send">
+                        </use>
+                    </svg>
+                    </span>
+                </button>
+                </div>
+            </form>  
+    </div>
     </div>
 </footer>
 
